worx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: worx-ingress
  namespace: worx
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: worx.steffbeckers.eu
      http:
        paths:
          - path: /
            backend:
              serviceName: worx-app
              servicePort: 80
  tls:
    - hosts:
        - worx.steffbeckers.eu
      secretName: steffbeckers.eu-tls
